src/test/deca/syntax/invalid/created/test-op2.deca
//test-op2.deca:3:23: token recognition error at: '| '
{
    boolean a = true ||| false ;
}